# ukui-search

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  file-utils.cpp  file-utils.h  globalsettings.h  main.cpp  res.qrc  resource.qrc  ukui-menu.pro  ukui-search.desktop  ukui-search.pro
DevelopmentProcess/: ShakingPotManual.txt  mlocate.txt  readme.md
appmatch/: app-match.cpp  app-match.h  app-match.pri
control/: config-file.h  control.pri  home-page-item.cpp  home-page-item.h  option-view.h  search-detail-view.cpp  search-detail-view.h  search-list-view.cpp  search-list-view.h
data/: org.ukui.log4qt.ukui-search.gschema.xml  org.ukui.search.data.gschema.xml  ukui-search-app-data-service.desktop  ukui-search-menu.desktop  ukui-search-service-dir-manager.desktop  ukui-search-service.desktop  ukui-search.desktop
debian/: changelog  control  copyright  libchinese-segmentation-dev.install  libchinese-segmentation0.install  libfriso0.install  libukui-search-dev.install  libukui-search0.install  manpages  ukui-search-systemdbus.install  ukui-search.install  watch
frontend/: frontend.pro  main.cpp  mainwindow.cpp  mainwindow.h  resource.qrc  ukui-search-dbus-service.cpp  ukui-search-dbus-service.h  ukui-search-dubs-service.cpp  ukui-search-gui.cpp  ukui-search-gui.h
frontend-qml/: ResultListView.qml  SearchLineEdit.qml  SearchResultList.qml  SearchResultPage.qml  frontend-qml.pro  main-view.cpp  main-view.h  main.cpp  main.qml  qml.qrc  search-line-edit-view.cpp  search-line-edit-view.h  search-result-page-view.cpp  search-result-page-view.h
index/: blockdirs.h  chinesecharacterstopinyin.cpp  chinesecharacterstopinyin.h  document.cpp  document.h  file-reader.cpp  file-reader.h  file-searcher.cpp  file-searcher.h  filetypefilter.cpp  index-generator.cpp  index-generator.h  index.pri  inotify-manager.cpp  inotify-manager.h  inotify.cpp  inotify.h  messagelist-manager.cpp  messagelist-manager.h  messagelistmanager.cpp  messagelistmanager.h  test-Inotify-Manager.cpp  testInotifyManager.cpp  text-content-indexer.cpp  traverse_bfs.h
libchinese-segmentation/: chinese-segmentation-private.h  chinese-segmentation.cpp  chinese-segmentation.h  common-struct.h  hanzi-to-pinyin-private.h  hanzi-to-pinyin.cpp  hanzi-to-pinyin.h  libchinese-segmentation.pro  libchinese-segmentation_global.h  pinyinmanager.cpp  pinyinmanager.h
libfriso/: friso-interface.c  friso-interface.h  friso-segmentation.cpp  friso-segmentation.h  friso-utils.cpp  friso-utils.h  libfriso-segmentation_global.h  libfriso.pro
libsearch/: app-db-common.h  app-info-dbus-argument.h  common.h  file-utils.cpp  file-utils.h  global-settings.cpp  global-settings.h  globalsettings.cpp  globalsettings.h  gobject-template.cpp  gobject-template.h  (+6 more)
(+555 files in other folders)
